; ModuleID = '/home/carl/AnghaBench/linux/drivers/s390/scsi/extr_zfcp_fc.c_zfcp_fc_port_scan_backoff.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/s390/scsi/extr_zfcp_fc.c_zfcp_fc_port_scan_backoff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@port_scan_backoff = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zfcp_fc_port_scan_backoff() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @port_scan_backoff, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %9

5:                                                ; preds = %0
  %6 = call i32 (...) @get_random_int()
  %7 = load i32, i32* @port_scan_backoff, align 4
  %8 = urem i32 %6, %7
  store i32 %8, i32* %1, align 4
  br label %9

9:                                                ; preds = %5, %4
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i32 @get_random_int(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
